<resources>
    <string name="app_name">LiveKit</string>
    <string name="livekit_app_running">Running</string>
    <string name="livekit_audience_number">%d people</string>
    <string name="livekit_anchor_audience_list_panel_title">Online audience</string>
    <string name="livekit_barrage_text_hint">Let\'s talk</string>
    <string name="livekit_start_live">Go live</string>
    <string name="livekit_switch_landscape">Switch screen</string>
    <string name="livekit_fan_count">Fans</string>
    <string name="livekit_edit_cover">Edit</string>
    <string name="livekit_stream_categories">Live type:</string>
    <string name="livekit_stream_privacy_status">Live mode:</string>
    <string name="livekit_stream_categories_default">Daily chat</string>
    <string name="livekit_stream_privacy_status_default">Public</string>
    <string name="livekit_stream_privacy_status_privacy">Privacy</string>
    <string name="livekit_titile_preset_cover">Preset Images</string>
    <string name="livekit_set_as_cover">Set as cover</string>
    <string name="livekit_set_as_background">Set as background</string>
    <string name="livekit_follow_anchor">Follow</string>
    <string name="livekit_unfollow_anchor">unfollow</string>
    <string name="livekit_liveroom_id">Live Room ID:</string>
    <string name="livekit_permission_camera">Camera</string>
    <string name="livekit_permission_microphone">Microphone</string>
    <string name="livekit_permission_bluetooth">Bluetooth</string>
    <string name="livekit_permission_separator">,</string>
    <string name="livekit_permission_tips">Please turn on the %s permission first</string>
    <string name="livekit_permission_title">%s applies for access to the %s</string>
    <string name="livekit_permission_mic_reason">Needs access to your microphone, and it can be used for functions
        such as Live etc.</string>
    <string name="livekit_permission_camera_reason">Needs access to your camera, and it can be used for functions
        such as Live etc. For beauty filters to work, we will collect the facial information captured by your camera in
        real time to detect your facial features.</string>
    <string name="livekit_permission_bluetooth_reason">To ensure that you can connect to Bluetooth function for
        communication during Live, we need to request permission of nearby devices.</string>
    <string name="livekit_link_mic_manager">Link Management</string>
    <string name="livekit_connection">Co-host</string>
    <string name="livekit_disconnection">Disconnect</string>
    <string name="livekit_hang_up">Hang Up</string>
    <string name="livekit_accept">Accept</string>
    <string name="livekit_reject">Reject</string>
    <string name="livekit_receive">Accept</string>
    <string name="livekit_start_connection">Invite</string>
    <string name="livekit_disconnect_tips">Are you sure you want to disconnect from other streamers?</string>
    <string name="livekit_disconnect_cancel">Cancel</string>
    <string name="livekit_end_connect">Disconnect</string>
    <string name="livekit_connect_failed">Failed to connect.</string>
    <string name="livekit_connect_inviting">Waiting</string>
    <string name="livekit_connect_error">Other errors, cannot connect.</string>
    <string name="livekit_connect_conflict">The host is currently co-hosting with other streamers.</string>
    <string name="livekit_connection_room_full">The number of co-hosting has exceeded the maximum limit.</string>
    <string name="livekit_connect_request_failed">Request failed.</string>
    <string name="livekit_end_live">End Live</string>
    <string name="livekit_end_pk_tips">You are currently in PK mode. Would you like to  [End PK] or [End Live]
        ?</string>
    <string name="livekit_end_pk">End PK</string>
    <string name="livekit_end_connection_tips">You are currently co-hosting with other streamers. Would you like to
        [End Co-host] or [End Live] ?</string>
    <string name="livekit_end_connection">End Co-host</string>
    <string name="livekit_connect_inviting_append">" invite you to host together"</string>
    <string name="livekit_enable_audience_request_link">Allow viewers to apply for continuous microphone</string>
    <string name="livekit_seat_list_title">Current wheat position(%d/%d)</string>
    <string name="livekit_connection_list_title">Connecting Streamers(%d)</string>
    <string name="livekit_seat_application_title">Apply for continuous wheat(%d)</string>
    <string name="livekit_recommended_list">Suggested Hosts</string>
    <string name="livekit_link_mic_down_title_popup">Requesting(%d)</string>
    <string name="livekit_title_link_mic_selector">Choose Link Mode</string>
    <string name="livekit_text_link_mic_selector">connect upon host\'s approval</string>
    <string name="livekit_text_link_mic_video">Apply for video link</string>
    <string name="livekit_text_link_mic_audio">Apply for audio link</string>
    <string name="livekit_text_cancel_link_mic_apply">Cancel application for link mic</string>
    <string name="livekit_text_close_link_mic">End the link mic</string>
    <string name="livekit_toast_live_stream_ended">Live stream has ended</string>
    <string name="livekit_title_link_video_settings">Adjust the video link mic screen</string>
    <string name="livekit_btn_apply_link_mic">Apply for link mic</string>
    <string name="livekit_tips_apply_link_mic">The screen effect will automatically take effect after connecting</string>
    <string name="livekit_video_settings_item_beauty">Beauty</string>
    <string name="livekit_video_settings_item_makeup">Makeup</string>
    <string name="livekit_video_settings_item_filter">Filter</string>
    <string name="livekit_video_settings_item_mirror">Mirror</string>
    <string name="livekit_video_settings_item_flip">Flip</string>
    <string name="livekit_settings_bg_image">Background</string>
    <string name="livekit_beauty_panel_title">One-click beauty</string>
    <string name="livekit_beauty_item_close">Close</string>
    <string name="livekit_beauty_item_smooth">Smooth</string>
    <string name="livekit_beauty_item_whiteness">Whiteness</string>
    <string name="livekit_beauty_item_ruddy">Ruddy</string>
    <string name="livekit_dialog_options_confirm">Confirm</string>
    <string name="livekit_dialog_options_knew">I know</string>
    <string name="livekit_title_enter_room_failed">Failed to enter the room</string>
    <string name="livekit_enter_room_failed">Failed to enter the room, please try again later. Status information: {%s, %s}</string>
    <string name="livekit_title_link_apply_rejected">Request denied</string>
    <string name="livekit_link_apply_rejected">The anchor did not approve your request, please try again later</string>
    <string name="livekit_title_link_apply_timeout">Request timeout</string>
    <string name="livekit_link_apply_timeout">The host did not handle the connection request, please try again later</string>
    <string name="livekit_toast_apply_link_mic">You have submitted a link mic request, please wait for the author approval</string>
    <string name="livekit_toast_link_mic_success">Connected successfully</string>
    <string name="livekit_tosat_operate_timeout">Operation timeout, please try again later. Status information: {%s, %s}</string>
    <string name="livekit_tosat_operate_failed">Operation failed, please try again later. Status information: {%s, %s}</string>
    <string name="livekit_stream_type">Live categories</string>
    <string name="livekit_stream_id">Stream Id</string>
    <string name="livekit_barrage_input_hint">Please enter barrage</string>
    <string name="livekit_barrage_btn_send">Send</string>
    <string name="livekit_barrage_me">Me</string>
    <string name="livekit_barrage_agree">Agree</string>
    <string name="livekit_barrage_warning_not_empty">"input can't be empty!"</string>
    <string name="livekit_settings">Settings</string>
    <string name="livekit_audio_effect">Audio</string>
    <string name="livekit_more_settings">More Config</string>
    <string name="livekit_video_params">Video Config</string>
    <string name="livekit_video_config">Video</string>
    <string name="livekit_link">LINK</string>
    <string name="livekit_pk">Anchor PK</string>
    <string name="livekit_send_gift">Send a Gift</string>
    <string name="livekit_like">like</string>
    <string name="livekit_comment">Comment</string>
    <string name="livekit_hidden_audience_nickname">Hide audience nickname</string>
    <string name="livekit_allow_share">Allow sharing</string>
    <string name="livekit_waiting_pass">Waiting</string>
    <string name="livekit_gift_give_gift">Give gift</string>
    <string name="livekit_gift_title">Gift</string>
    <string name="livekit_gift_me">Me</string>
    <string name="livekit_music">Music</string>
    <string name="livekit_music_cheerful">Cheerful</string>
    <string name="livekit_music_melancholy">Melancholy</string>
    <string name="livekit_music_wonder_world">Wonder World</string>
    <string name="livekit_clarity">Clarity</string>
    <string name="livekit_fps">FPS</string>
    <string name="livekit_ear_return">Ear return</string>
    <string name="livekit_ear_return_volume">Ear return volume</string>
    <string name="livekit_background_music">Background music</string>
    <string name="livekit_select_music">Select music</string>
    <string name="livekit_audio_settings">Audio settings</string>
    <string name="livekit_music_volume">Music volume</string>
    <string name="livekit_people_volume">Voice volume</string>
    <string name="livekit_music_pitch">Music pitch</string>
    <string name="livekit_change_voice">Voice change</string>
    <string name="livekit_change_voice_none">Original voice</string>
    <string name="livekit_change_voice_child">Naughty child</string>
    <string name="livekit_change_voice_girl">Lori</string>
    <string name="livekit_change_voice_uncle">Uncle</string>
    <string name="livekit_change_voice_metal">Heavy metal</string>
    <string name="livekit_change_voice_cold">Cold</string>
    <string name="livekit_change_voice_foreign_language">Foreign language accent</string>
    <string name="livekit_change_voice_trapped_beast">Trapped beast</string>
    <string name="livekit_change_voice_fat_house">fat house</string>
    <string name="livekit_change_voice_strong_current">Strong current</string>
    <string name="livekit_change_voice_machinery">Heavy machinery</string>
    <string name="livekit_change_voice_ethereal">Ethereal</string>
    <string name="livekit_reverb">Reverb</string>
    <string name="livekit_reverb_none">No effect</string>
    <string name="livekit_reverb_karaoke">KTV</string>
    <string name="livekit_reverb_small_room">Small room</string>
    <string name="livekit_reverb_town_hall">Town Hall</string>
    <string name="livekit_reverb_low">Low</string>
    <string name="livekit_reverb_loud_and_loud">loud</string>
    <string name="livekit_reverb_metallic_sound">Metallic sound</string>
    <string name="livekit_reverb_metallic_magnetic">Magnetic</string>
    <string name="livekit_reverb_metallic_ethereal">Ethereal</string>
    <string name="livekit_reverb_metallic_recording_studio">Recording studio</string>
    <string name="livekit_reverb_metallic_melodious">melodious</string>
    <string name="livekit_reverb_metallic_recording_studio2">Recording Studio 2</string>
    <string name="livekit_tips_title">Warm Tips</string>
    <string name="livekit_musuic_delete_tips">Are you sure you want to delete \"%s\"?</string>
    <string name="livekit_cancel">Cancel</string>
    <string name="livekit_confirm">Confirm</string>
    <string name="livekit_waiting_link">Waiting Linking</string>
    <string name="livekit_anchor">Anchor</string>
    <string name="livekit_gift_balance">Balance</string>
    <string name="livekit_gift_recharge">Recharge</string>
    <string name="livekit_voiceroom_need_agree">Require your consent to speak</string>
</resources>