<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/giftLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/livekit_gift_bg_bottom_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_gift_panel_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:text="@string/livekit_gift_title"
            android:textColor="@color/livekit_design_standard_g7"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.trtc.uikit.component.gift.GiftListPanelView
        android:id="@+id/gift_list_view"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center_vertical|right"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livekit_gift_balance"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_recharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/livekit_gift_recharge_bg"
            android:text="@string/livekit_gift_recharge"/>

    </LinearLayout>

</LinearLayout>