<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/title_link_type_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/livekit_design_standard_g7"
            android:textSize="16sp"
            android:text="@string/livekit_title_link_mic_selector"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tips_link_type_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:textColor="@color/livekit_not_standard_grey"
            android:textSize="12sp"
            android:text="@string/livekit_text_link_mic_selector"
            app:layout_constraintTop_toBottomOf="@+id/title_link_type_panel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <ImageView
            android:id="@+id/video_link_settings"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/livekit_link_video_settings"
            app:layout_constraintTop_toTopOf="@id/title_link_type_panel"
            app:layout_constraintBottom_toBottomOf="@id/tips_link_type_panel"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_link_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/link_video_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/livekit_link_video"
            app:layout_constraintTop_toTopOf="@id/link_video_text"
            app:layout_constraintBottom_toBottomOf="@id/link_video_text"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/link_video_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/livekit_design_standard_g7"
            android:text="@string/livekit_text_link_mic_video"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/link_video_icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_link_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/link_audio_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"

            android:src="@drawable/livekit_link_audio"
            app:layout_constraintTop_toTopOf="@id/link_audio_text"
            app:layout_constraintBottom_toBottomOf="@id/link_audio_text"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/link_audio_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/livekit_text_link_mic_audio"
            android:textColor="@color/livekit_design_standard_g7"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/link_audio_icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>